<resources>
    <string name="app_name">Tickle my Phone(True Remote)</string>
    <string name="abt_srinathrao">"Ideator        : Jalsa Team"</string>
    <string name="abt_smaran">"Developer     : Smaran "</string>
    <string name="abt_shashank">"Tester            : Shashank"</string>
    <string name="selected_item">Not_selected_any</string>
    <string name="package_str">com.jalsalabs.ticklemyphonefull</string>
    <string name="hello">Hello, Smaran is Idiot!</string>
    <string name="no_info">Sorry no information available!</string>
    <string name="Advanced">Advanced</string>
    <string name="user">ticklemyphonemedia@gmail.com</string>
    <string name="pwd">tml12345</string>
    <string name="MM_Manage_Rules">Manage Rules</string>
    <string name="MM_Activate">Activate</string>
    <string name="MM_Manage_Sender">Manage Sender</string>
    <string name="MM_LOG_Details">Monitor Log Details</string>
    <string name="MM_Help">User Manual</string>
    <string name="MM_About">About</string>
    <string name="MM_Exit">Exit</string>
    <string name="MM_HelpSelfService">Not working!!! Help Me!</string>
    <string name="MM_Close">Close</string>
    <string name="MM_Rate">Please Rate our application</string>
    <string name="rm_callback">Call Back</string>
    <string name="rm_callback_spk">Call Back Speaker ON</string>
    <string name="rm_vibrate">Vibrate</string>
    <string name="rm_vibrate_nsec">Vibrate N Seconds</string>
    <string name="rm_popp">Popup Settings</string>
    <string name="rm_play_ringtone">Play Default Ringtone</string>
    <string name="rm_sms_acknowledge">SMS Acknowledgement</string>
    <string name="rm_call_fwd">Call Number</string>
    <string name="rm_call_fwd_spk">Call Number speaker on</string>
    <string name="rm_whereareyou">Where Are You</string>
    <string name="rm_takepicksend">Take Live Picture and send image</string>
    <string name="rm_takevideosend">Record Live video and send video footage</string>
    <string name="rm_help">Send Help message to sender</string>
    <string name="rm_getsms">Send all SMS text</string>
    <string name="rm_installlist">Send Installed and Running Application list</string>
    <string name="rm_setgps">GPS Settings</string>
    <string name="rm_setwifi">Wifi Settings</string>
    <string name="rm_getdir">Send Directory (File) Listing of SD Card</string>
    <string name="rm_getfile">Send File from SD Card</string>
    <string name="rm_playfile">Play MP3 file from SD Card</string>
    <string name="rm_networkdata">Network Data Settings</string>
    <string name="rm_add_contacts">Add friend Contact info</string>
    <string name="rm_bluetooth">Bluetooth Settings</string>
    <string name="rm_smsreport">Send SMS detailed report</string>
    <string name="rm_callreport">Send Call logs detailed report</string>
    <string name="rm_mobileinfo">Send Mobile info</string>
    <string name="rm_send_miss_call">Send Call Log Details</string>
    <string name="rm_takephoto">Take photo</string>
    <string name="rm_saveaudio">Record Live audio and save in SD Card</string>
    <string name="rm_saveaudionsec">Record Live audio and save in SD Card for N Seconds</string>
    <string name="rm_sendaudio">Record Live Audio Send attachment</string>
    <string name="rm_buzzmobile">Buzz my Mobile</string>
    <string name="rm_calevent">Create Calendar event</string>
    <string name="rm_sendcontactlists">Send Contact details</string>
    <string name="rl0_title">Call Back</string>
    <string name="rl0_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl0_then">Then Call Back the sender automatically</string>
    <string name="r_eg">"Example
 SMS :    "</string>
    <string name="rl0_ex">"
 Result :
 Tickle my Phone will Call back the SMS sender immediately!"</string>
    <string name="rl1_title">Call back with Speaker ON</string>
    <string name="rl1_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl1_then">"

Then Call Back the sender automatically and set Speaker ON in my phone"</string>
    <string name="rl1_ex">"
 Result :
 Tickle my Phone will Call back the SMS sender immediately and put the speaker on in my phone."</string>
    <string name="rl2_title">Vibrate</string>
    <string name="rl2_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl2_then">Then Vibrate my phone for 10 seconds</string>
    <string name="rl2_ex">"
 Result :
 Tickle my Phone will Vibrate the mobile for 10 seconds"</string>
    <string name="rl3_title">Vibrate N Seconds</string>
    <string name="rl3_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl3_then">Then Vibrate my phone for N seconds</string>
    <string name="rl3_ex">" 30
Result :
 Tickle my Phone will vibrate the mobile for 30 seconds"</string>
    <string name="rl4_title">Popup Settings</string>
    <string name="rl4_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl4_then">Then Show the message in a popout window</string>
    <string name="rl4_ex">"
 Result : Tickle my Phone Popout message shown."</string>
    <string name="rl5_title">Play Default Ringtone</string>
    <string name="rl5_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl5_then">Then Play my default Ringtone</string>
    <string name="rl5_ex">"
 Result :
 Tickle my Phone will Play the current Ringtone for the received SMS"</string>
    <string name="rl6_title">SMS Acknowledgement</string>
    <string name="rl6_ack">Acknowledgement Message</string>
    <string name="rl6_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl6_then">Then Send the acknowledgement message back to the sender</string>
    <string name="rl6_ex">"
 Result :
 Tickle my Phone will Reply acknowledgement message to the sender."</string>
    <string name="rl7_title">Call Number</string>
    <string name="rl7_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl7_then">Then Call the number specified in the SMS</string>
    <string name="rl7_ex">"  +14081234567
 Result :
 Tickle my Phone will Call the number +14081234567 automatically"</string>
    <string name="rl8_title">Call Number with Speaker ON</string>
    <string name="rl8_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl8_then">Then Call the number specified in the SMS and enable the Speaker</string>
    <string name="rl8_ex">"  +14081234567
 Result :
 Tickle my Phone will Call the number +14081234567 with Speaker on."</string>
    <string name="rl9_title">Where are you</string>
    <string name="rl9_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl9_then">Then Send the GEO Location and the Google maps link to the sender as SMS</string>
    <string name="rl9_ex">"
 Result :
 Tickle my Phone will send SMS to Sender with real time Longitude and Latitude with the Google map link."</string>
    <string name="rl10_title">Take Picture and save to SD Card</string>
    <string name="rl10_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl10_then">Then Tickle my Phone will take the Live picture and save the image in the SD Card. Tickle my Phone will also send the File details to the sender.</string>
    <string name="rl10_ex">"
 Result :
 Tickle my Phone will take the live photo image and save the image file in the SD Card. Tickle my Phone will also send the image File and the Folder location in SD Card as a SMS back to the sender"</string>
    <string name="rl11_title">Take Live Picture and send image</string>
    <string name="rl11_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl11_then">Then Take the Live picture and send image as an attachment to Email specified in the SMS</string>
    <string name="rl11_ex">"  youremail@gmail.com
 Result :
 Tickle my Phone will take the Live Image from the camera and send the image as an attachment to email youremail@gmail.com. Tickle my Phone will also send the confirmation message to the sender"</string>
    <string name="rl12_title">Record Live video and send video footage</string>
    <string name="rl12_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl12_then">Then Record the Live video and send video file as an attachment to to Email specified in SMS</string>
    <string name="rl12_ex">"  youremail@gmail.com
 Result :
 Tickle my Phone will record the live Video for 20 seconds and send the video file as an attachment to email youremail@gmail.com."</string>
    <string name="rl13_title">Record Live Audio save in SD Card</string>
    <string name="rl13_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl13_then">Then Show the message in a pop out window</string>
    <string name="rl13_ex">"
 Result :
 Tickle my Phone will record the live Audio for 30 seconds and save the audio file in SD Card. Tickle my Phone will also send the confirmation SMS to the sender"</string>
    <string name="rl14_title">Record Live Audio for N seconds and save in SD Card</string>
    <string name="rl14_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl14_then">Then Record the Live audio for N seconds specified in the SMS and save audio file in SD Card. Soon after recording completed , Tickle my Phone will also send the confirmation SMS to the sender with the File details</string>
    <string name="rl14_ex">"  180
 Result :
 Tickle my Phone will record the live Audio for 180 seconds (3 mins) and save the audio file in SD Card. Tickle my Phone will also send the confirmation SMS with the file details to the sender"</string>
    <string name="rl15_title">Record Live Audio send attachment</string>
    <string name="rl15_when">When this phone receives Text message (SMS) with the starting word as</string>
    <string name="rl15_then">Then Record the Live Audio for 30 seconds and send the email with the audio file as attachment. Tickle my Phone will also send the confirmation SMS to the sender</string>
    <string name="rl15_ex">"  youremail@gmail.com
 Result :
 Tickle my Phone will record the live Audio for 30 seconds and send the Audio file as an attachment to email youremail@gmail.com. Tickle my Phone will also send the confirmation SMS to the sender"</string>
    <string name="rl16_title_notused">Send Result for given Code</string>
    <string name="act_actvt_tml_to_full">Activate Tickle my Phone to Full Version</string>
    <string name="act_ur_imei">Your IMEI Code</string>
    <string name="act_act_code">Activation Code</string>
    <string name="act_activate_key">Tickle my Phone Activation Key</string>
    <string name="act_cancel">Cancel</string>
    <string name="act_activate">Activate</string>
    <string name="act_interested">I am interested to go for Full version</string>
    <string name="autoansweralw_allow_dis">"Allow and Dis-allow below telephone numbers to perform Auto Answering the Call. [No value means allow all telephones, which is Very Dangerous!!!]
"</string>
    <string name="alw_only">Allow Only</string>
    <string name="alw_dissallow">Disallow</string>
    <string name="alw_use_comma">Use comma separated mobile numbers including country code. See help for more.</string>
    <string name="alw_save">Save</string>
    <string name="alw_data_hint">Enter comma(,) separated telephone numbers. eg. +1407123456,+918012345678</string>
    <string name="help_recommend">Recommend Tickle my Phone to Friends</string>
</resources>