<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/TableLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@id/image" android:background="@color/darkbrown" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_actvt_tml_to_full" android:width="320.0dip" android:layout_below="@id/buttons_layout" />
		<TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/blank_link" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
		<TableRow android:id="@id/TableRow01">
			<TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/keyword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_ur_imei" />
			<EditText android:textSize="12.0sp" android:id="@id/ET_IMEICode" android:height="20.0px" android:width="250.0px" android:singleLine="true" android:editable="false" />
		</TableRow>
		<TableRow android:id="@id/TableRow01">
			<TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/keyword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_act_code" />
			<EditText android:textSize="15.0sp" android:id="@id/ET_ActivationCode" android:hint="@string/act_activate_key" android:height="20.0px" android:width="200.0px" android:singleLine="true" />
		</TableRow>
		<Button android:gravity="center" android:id="@id/activate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_activate" />
		<Button android:gravity="center" android:id="@id/interested" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_interested" />
		<Button android:gravity="center" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_cancel" />
	</TableLayout>
</LinearLayout>
