<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center" android:orientation="vertical" android:background="@color/darkbrown" android:padding="10.0px" android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TextView android:textSize="20.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:height="50.0dip" />
		<TextView android:textSize="10.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:height="10.0dip" />
		<ImageView android:layout_gravity="center" android:id="@id/frame_1" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" />
"\u0009//\u0009android:text=\"Ideator      : Srinath Rao\" "		<TextView android:textSize="20.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Ideator         : Jalsa Team" android:height="25.0dip" />
		<TextView android:textSize="18.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/abt_smaran" android:height="25.0dip" />
		<TextView android:textSize="18.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/abt_shashank" android:height="25.0dip" />
		<TextView android:textSize="20.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:height="20.0dip" />
		<Button android:layout_gravity="center" android:id="@id/Recommend" android:background="@drawable/buttongreen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_recommend" style="@style/ButtonText" />
		<TextView android:textSize="10.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:height="10.0dip" />
		<TextView android:textSize="11.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/txtSize2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Copyright(c) 2010-12 Jalsa Labs. All rights reserved." android:height="20.0dip" />
	</LinearLayout>
</ScrollView>
